--- a/color-styles/deep-blue.css
+++ b/color-styles/deep-blue.css
@@ -1,5 +1,3 @@
-/* +++ Module: Template-Specific Colors */
-
 /* ##################################
  * Deep Blue Theme:
  * #1c2349 	primary color (blue)
@@ -18,19 +16,9 @@
 	background-color: #5a688d;
 }
 
-.main-nav a:hover, .main-nav a.current {
+.main-nav a:hover, .main-nav .current a {
 	/* Secondary color */
 	background-color: #5a688d;
-}
-
-.search {
-	/* Secondary color */
-	background-color: #5a688d;
-	background-color: #01347F;
-	background-color: #000;
-	
-	/* background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#00ABEB), color-stop(0.5, white), color-stop(0.5, #6C0), to(white)); */
-
 }
 
 .main-content .center {
@@ -50,3 +38,7 @@
 	/* Secondary color */
 	color: #ffffff;
 }
+
+/**************
+END COLOR THEME
+***************/
